<resources>
    <string name="app_name">World News</string>
    <string name="logo">Logo Application</string>
    <string name="sign_in">Sign-in</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="login" translatable="false">Login</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="password" translatable="false">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="txt_or">OR</string>
    <string name="google_log">Login with Google</string>
    <string name="google_login">Login with Google</string>
    <string name="new_account">New to World News?</string>
    <string name="register">Register</string>

    <string name="country">Country of interest</string>
    <string name="topic">Topic of interest</string>

    <string name="ro7_ommak">Ro7 ommak</string>
    <string name="abuk">Abuk</string>
    <string name="ommak">Ommak</string>
    <string name="france">France</string>
    <string name="italy">Italy</string>
    <string name="germany">Germany</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="united_states">United States</string>

    <string-array name="country_array">
        <item>@string/france</item>
        <item>@string/germany</item>
        <item>@string/italy</item>
        <item>@string/united_kingdom</item>
        <item>@string/united_states</item>
    </string-array>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="next">Next</string>

    <string name="alert_text_country_of_interest">Choose at least one country of interest</string>
    <string name="alert_text_topic_of_interest">Choose at least one topic of interest</string>

    <string name="error_email">Insert a valid email address</string>
    <string name="error_password">Password cannot be empty</string>
    <string name="check_login_data_message">Check the data you inserted</string>
    <string name="fav_country">Favourite country</string>
</resources>